--- a/src/app/page-main/elements/pie-chart/pie-chart.component.html
+++ b/src/app/page-main/elements/pie-chart/pie-chart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block">
+<div style="display: block" *ngIf="data != null">
   <canvas baseChart
           [data]="data"
           [labels]="labels"
