--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,10 @@
 <mat-progress-bar
   *ngIf="loading" color="accent" mode="indeterminate">
 </mat-progress-bar>
-<main #fader [@fadeAnimation]="loading">
+<main>
   <div class="container">
-
-    <span [@fadeAnimation]="isOpen">TEST</span>
-    <router-outlet #outlet="outlet" (activate)="setOutlet(outlet)"></router-outlet>
+    <router-outlet (activate)="routerCallback()"></router-outlet>
   </div>
+
 </main>
 
