--- a/src/app/page-main/coviddata-main/coviddata-main.component.html
+++ b/src/app/page-main/coviddata-main/coviddata-main.component.html
@@ -3,23 +3,30 @@
   <h3 class="text-black-50">Live update and statistics</h3>
 </div>
 
-<div class="list-group-item-dark p-2 text-center my-4" *ngIf="countryName">
-  <a [routerLink]="['/']">Worldwide</a> -> {{countryName}}
+<div *ngIf="loading">LOADING...</div>
+
+<div *ngIf="!loading">
+
+  <div class="list-group-item-dark p-2 text-center my-4" *ngIf="countryName">
+    <a [routerLink]="['/']">Worldwide</a> -> {{countryName}}
+  </div>
+
+  <app-section [title]="'Corona Virus Summary Worldwide'" class="mat-elevation-z8">
+    <app-coviddata-table [dataSource]="summaryTableObservable"></app-coviddata-table>
+  </app-section>
+
+  <app-section [title]="'Corona Virus Cases Distribution Worldwide'">
+    Placeholder for pie chart
+    <app-pie-chart [dataSource]="pieChartData" [labels]="pieChartLabels"></app-pie-chart>
+  </app-section>
+
+  <app-section [title]="'Daily Corona Virus Cases Worldwide'">
+    Placeholder for bar chart
+  </app-section>
+
+  <app-section [title]="'Total Corona Virus Cases Worldwide'">
+    Placeholder for line chart
+  </app-section>
+
+
 </div>
-
-<app-section [title]="'Corona Virus Summary Worldwide'" class="mat-elevation-z8">
-  <app-coviddata-table [dataSource]="summaryTableObservable"></app-coviddata-table>
-</app-section>
-
-<app-section [title]="'Corona Virus Cases Distribution Worldwide'">
-  Placeholder for pie chart
-  <app-pie-chart [data]="pieChartData" [labels]="pieChartLabels"></app-pie-chart>
-</app-section>
-
-<app-section [title]="'Daily Corona Virus Cases Worldwide'">
-  Placeholder for bar chart
-</app-section>
-
-<app-section [title]="'Total Corona Virus Cases Worldwide'">
-  Placeholder for line chart
-</app-section>
