--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
-<app-coviddata-main [dataSource]="globalDataSource"></app-coviddata-main>
+<app-coviddata-main [dataSource]="globalDataSource" [countryName]="'Worldwide'"></app-coviddata-main>
 
 <app-section [title]="'Corona Virus Cases by Country'">
-  <app-countries-table [dataSource]="countriesTableObservable" (countryClick)="router.navigate(['/country/', $event])"></app-countries-table>
+  <app-countries-table [dataSource]="countriesTableObservable" (countryClick)="onCountryClick($event)"></app-countries-table>
 </app-section>
