--- a/src/app/page-main/elements/pie-chart/pie-chart.component.html
+++ b/src/app/page-main/elements/pie-chart/pie-chart.component.html
@@ -3,5 +3,6 @@
           [data]="data"
           [labels]="labels"
           [colors]="colors"
-          [chartType]="'pie'"></canvas>
+          [chartType]="'pie'"
+          [options]="pieChartOptions"></canvas>
 </div>
