--- a/src/app/page-main/elements/countries-table/countries-table.component.css
+++ b/src/app/page-main/elements/countries-table/countries-table.component.css
@@ -1,7 +1,6 @@
-tr td:first-child {
-  flex: 1 1 28% !important
+th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
+  padding-right: 18px;
 }
-
-tr td, tr th {
-  flex: 1 1 12% !important;
+td.mat-cell {
+  text-align: right;
 }
