--- a/src/app/page-main/elements/coviddata-table/coviddata-table.component.html
+++ b/src/app/page-main/elements/coviddata-table/coviddata-table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="this.dataSource" class="mat-elevation-z8 w-100" *ngIf="ready">
+<table mat-table [dataSource]="this.dataSource" class="w-100" *ngIf="ready">
 
   <ng-container matColumnDef="key">
     <td mat-cell *matCellDef="let element"> {{ element.key }} </td>
