--- a/src/app/page-main/section/section.component.html
+++ b/src/app/page-main/section/section.component.html
@@ -1,2 +1,5 @@
-<h5 class="mt-4">{{title}}</h5>
-<ng-content></ng-content>
+<div class="mat-elevation-z8 px-5 my-5 py-5">
+  <h5 >{{title}}</h5>
+  <ng-content></ng-content>
+</div>
+
