--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <app-header></app-header>
-<mat-progress-bar
-  *ngIf="loading" color="accent" mode="indeterminate">
+
+<mat-progress-bar color="accent" mode="indeterminate" [class]="{'invisible': !loading}">
 </mat-progress-bar>
 <main>
-  <div class="container">
+  <div class="container p-sm-0">
     <div style="overflow-y: hidden">
 
       <div [class]="{'an-hidden': loading}" class="an-box an-down px-3">
@@ -13,17 +13,20 @@
   </div>
 
 </main>
-<div [class]="{'an-hidden': !loading}" class="an-box an-up px-3 position-fixed w-100 display-4">
+
+<div [class]="{'an-hidden': !loading}" class="an-box an-up position-fixed w-100">
   <div class="d-flex text-center justify-content-center align-items-center">
     <div>
-      <p>Loading data...</p>
+      <p class="h4">Loading data...</p>
 
-      <div class="d-flex justify-content-center">
-        <mat-spinner></mat-spinner>
+      <div class="d-flex justify-content-center pt-3">
+        <mat-spinner [diameter]="80" [strokeWidth]="4"></mat-spinner>
       </div>
     </div>
 
 
   </div>
 </div>
+
+
 
