--- a/src/app/page-main/section/section.component.html
+++ b/src/app/page-main/section/section.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8 px-5 my-5 py-5">
+<div class="px-sm-4 my-sm-4 py-4 section">
   <h5 >{{title}}</h5>
   <ng-content></ng-content>
 </div>
