--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,11 @@ tr.mat-header-row {
 .v-center {
   vertical-align: middle;
 }
-
+@media (min-width: 992px) {
+  .mat-elevation-z8-lg {
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  }
+}
 
 /* cursors */
 .cursor-alias {cursor: alias;}
