news listing with delete option

--- a/src/app/countrypage/country-page.component.html
+++ b/src/app/countrypage/country-page.component.html
@@ -1,1 +1,1 @@
-<app-coviddata-main [dataSource]="countryDataObservable" [countryName]="countryName"></app-coviddata-main>
+<app-coviddata-main [dataSource]="countryDataObservable" [countryData]="countryData"></app-coviddata-main>
