--- a/src/app/page-main/coviddata-main/covid-data-main.component.html
+++ b/src/app/page-main/coviddata-main/covid-data-main.component.html
@@ -1,7 +1,8 @@
 <div class="text-center">
   <div class="d-flex justify-content-center align-items-center">
     <h1 class="mt-2">COVID-19</h1>
-    <img src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon.svg?alt=media&token=616da823-a716-46c6-8b40-6eb6bb0e1d07">
+    <img
+      src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon.svg?alt=media&token=616da823-a716-46c6-8b40-6eb6bb0e1d07">
   </div>
   <h3 class="text-black-50">Live update and statistics</h3>
 </div>
@@ -10,13 +11,20 @@
 
 <div *ngIf="!loading">
 
-  <div class="list-group-item-dark p-2 text-center my-4" *ngIf="countryName != null && countryName != 'Worldwide'">
+  <div class="list-group-item-dark p-2 text-center my-4" *ngIf="country != null && country.Slug != null">
     <a appLoadRouterLink="/">Worldwide</a>
-    -> {{countryName}}
+    -> {{country.Country}}
   </div>
 
   <app-section [title]="'Corona Virus Summary '+countryDisplayName()" class="mat-elevation-z8">
     <app-coviddata-table [dataSource]="summaryTableObservable"></app-coviddata-table>
+  </app-section>
+
+  <app-section [title]="'News about COVID-19 '+countryDisplayName()">
+    <div class="newsDiv">
+      <app-news-listing [countrySlugObservable]="slugData"></app-news-listing>
+    </div>
+
   </app-section>
 
   <app-section [title]="'Corona Virus Cases Distribution '+countryDisplayName()">
