--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,19 @@
 <mat-toolbar color="primary">
   <div class="container-fluid container-lg px-0 px-md-3">
     <div class="d-flex align-items-center">
-      <div class="d-md-none">
-        <button mat-icon-button (click)="sidenav.toggle()">
+      <div class="d-md-none d-flex">
+        <button mat-icon-button (click)="sidenav.toggle()" class="align-self-center" style="outline: 0 !important;">
           <mat-icon>menu</mat-icon>
         </button>
       </div>
-      <div class="text-center text-md-left flex-grow-1 flex-md-grow-0 icon-div menu-buttons">
-        <a mat-button  appLoadRouterLink="/" class="d-flex align-items-center">
-          <img src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon_white.svg?alt=media&token=e3d02200-29b1-4d23-ac1d-c7d55a5fb0c3"  alt="Icon"/>
+      <div class="text-center text-md-left flex-grow-1 flex-md-grow-0 icon-div menu-buttons justify-content-center">
+        <a mat-button appLoadRouterLink="/" class="d-flex align-items-center ">
+          <img
+            src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon_white.svg?alt=media&token=e3d02200-29b1-4d23-ac1d-c7d55a5fb0c3"
+            alt="Icon"/>
         </a>
       </div>
       <div class="d-md-flex d-none align-items-center menu-buttons">
-        <span class="example-spacer"></span>
         <a mat-button appLoadRouterLink="/">Home</a>
         <a mat-button appLoadRouterLink="/news">News</a>
       </div>
@@ -26,16 +27,17 @@
   </div>
 
 </mat-toolbar>
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container>
 
   <mat-sidenav #sidenav mode="over" opened="false">
-    <div>
-      <a mat-button routerLink="/about-us">About us</a>
-      <a mat-button routerLink="/prices">Prices</a>
-      <a mat-button routerLink="/start-page">Start page</a>
-      <a mat-button routerLink="/offer">Offer</a>
-      <a mat-button routerLink="/contact">Contact</a>
+
+
+    <div class="list-group text-center" style="min-width: 33vw">
+      <a appLoadRouterLink="/" class="list-group-item list-group-item-action" (click)="sidenav.close()">Home</a>
+      <a appLoadRouterLink="/news" class="list-group-item list-group-item-action" (click)="sidenav.close()">News</a>
     </div>
+
+
   </mat-sidenav>
   <mat-sidenav-content>
     <ng-content></ng-content>
