--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
   </div>
 
 </mat-toolbar>
-<mat-sidenav-container>
+<mat-sidenav-container style="min-height: 100vh">
 
   <mat-sidenav #sidenav mode="over" opened="false">
 
