fix auth and graph

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="container-fluid container-lg">
       <div style="overflow-y: hidden">
 
-        <div [class]="{'an-hidden': loading}" class="an-box an-down px-3">
+        <div [class]="{'an-hidden': loading}" class="an-box an-down px-md-3">
           <router-outlet (activate)="routerCallback()"></router-outlet>
         </div>
       </div>
