--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -4,8 +4,7 @@
   <div>
     <form #f="ngForm" ngForm (ngSubmit)="$event.preventDefault(); $event.stopPropagation();" [formGroup]="formGroup">
       <p>
-        <app-country-selector #cSelector appearance="outline" [countriesSource]="countriesDataSubject"
-                              [slugControl]="formControls.country"
+        <app-country-selector #cSelector appearance="outline"   [slugControl]="formControls.country"
                               label="Country"></app-country-selector>
       </p>
       <p>
