--- a/src/app/page-main/section/section.component.html
+++ b/src/app/page-main/section/section.component.html
@@ -1,4 +1,4 @@
-<div class="px-sm-4 my-sm-4 py-4 section mat-elevation-z8-lg">
+<div class="px-md-4 my-md-4 py-4 section mat-elevation-z8-lg">
   <h5 >{{title}}</h5>
   <ng-content></ng-content>
 </div>
