--- a/src/app/news-listing/news-listing.component.html
+++ b/src/app/news-listing/news-listing.component.html
@@ -7,7 +7,7 @@
   <p *ngIf="newsData.length == 0">No news for this country</p>
   <mat-card class="my-2 mx-1" *ngFor="let e of newsData">
     <mat-card-header>
-      <div mat-card-avatar [style]="'background-image: url(\''+e.data.uimg+'\');'"></div>
+      <div mat-card-avatar [style]="e.data.uimg ? 'background-image: url(\''+e.data.uimg+'\');' : ''"></div>
       <mat-card-title>{{e.data.title}}</mat-card-title>
       <mat-card-subtitle>by {{e.data.author}} - <b>{{dateOf(e.data.date)}}</b></mat-card-subtitle>
     </mat-card-header>
