--- a/src/app/country-selector/country-selector.component.html
+++ b/src/app/country-selector/country-selector.component.html
@@ -5,11 +5,11 @@
   <input #inp matInput
          [matAutocomplete]="auto"
          [formControl]="countryFormControl"
-         (focusout)="onSelect(false)"
+         (focusout)="onSelect()"
          (click)="inp.select()"
   />
-  <mat-autocomplete #auto="matAutocomplete" (closed)="onSelect(true)"
-                    (optionSelected)="selectCountry($event.option.value)">
+  <mat-autocomplete #auto="matAutocomplete" (closed)="onSelect()"
+                    (optionSelected)="selectCountry($event.option.value); onSelect()">
     <mat-option *ngFor="let country of filteredOptions | async" [value]="country">
       {{country.Country}}
     </mat-option>
