--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<app-coviddata-main [dataSource]="globalDataSource" [countryData]="countryData" >
+<app-coviddata-main [dataSource]="globalDataSource" [summarySource]="summaryDataSource" [countryData]="countryData" >
 
   <app-section [title]="'Corona Virus Cases by Country'">
     <app-countries-table [dataSource]="countriesTableObservable"
