--- a/src/app/page-main/elements/daily-line-chart/daily-line-chart.component.html
+++ b/src/app/page-main/elements/daily-line-chart/daily-line-chart.component.html
@@ -1,8 +1,16 @@
-<div style="display: block;">
+<div *ngIf="!loaded">
+  Loading...
+</div>
+<div style="display: block;" *ngIf="loaded">
+  <div *ngIf="lineChartLabels == null">
+    No data available
+  </div>
+  <div *ngIf="lineChartLabels != null">
   <canvas baseChart width="400" height="400"
           [datasets]="lineChartData"
           [labels]="lineChartLabels"
           [options]="lineChartOptions"
           [legend]="true"
           [chartType]="'line'"></canvas>
+  </div>
 </div>
