remove token from images url

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
       <div class="text-center text-md-left flex-grow-1 flex-md-grow-0 icon-div menu-buttons justify-content-center">
         <a mat-button appLoadRouterLink="/" class="d-flex align-items-center ">
           <img
-            src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon_white.svg?alt=media&token=e3d02200-29b1-4d23-ac1d-c7d55a5fb0c3"
+            src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon_white.svg?alt=media"
             alt="Icon"/>
         </a>
       </div>
