--- a/src/app/page-main/coviddata-main/covid-data-main.component.html
+++ b/src/app/page-main/coviddata-main/covid-data-main.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-center align-items-center">
     <h1 class="mt-2">COVID-19</h1>
     <img
-      src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon.svg?alt=media&token=616da823-a716-46c6-8b40-6eb6bb0e1d07">
+      src="https://firebasestorage.googleapis.com/v0/b/covid19-ft-eurecom.appspot.com/o/icon.svg?alt=media">
   </div>
   <h3 class="text-black-50">Live update and statistics</h3>
 </div>
