use disease.sh data

--- a/src/app/page-main/coviddata-main/covid-data-main.component.html
+++ b/src/app/page-main/coviddata-main/covid-data-main.component.html
@@ -42,7 +42,9 @@
 
   <div class="p-2 mb-3 px-md-0">
     <div class="foot-box text-center p-2 mat-elevation-z2">
-      Data source: <a href="https://covid19api.com/" target="_blank">COVID-19 API / Johns Hopkins CSSE</a>
+      Data sources:<br>
+      <a href="https://covid19api.com/" target="_blank">COVID-19 API / Johns Hopkins CSSE</a><br>
+      <a href="https://disease.sh" target="_blank">disease.sh - Open Disease Data</a>
     </div>
 
   </div>
